# pattern_fastapi_project

./: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: bc07d86d1e19_create_something.py
app/: main.py
app/api/: auth.py  users.py
app/core/: config.py  dependencies.py  security.py
app/db/: session.py
app/db/models/: __init__.py  user.py
app/schemas/: auth.py  user.py
