[project]
name = "pattern-fastapi-project"
version = "0.1.0"
description = "FastAPI backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "alembic==1.13.1",
    "python-dotenv==1.0.1",
    "email-validator==2.1.0.post1",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.uv]
package = false
